change annotations to input prop

--- a/src/main/webapp/app/exercises/programming/shared/code-editor/container/code-editor-container.component.html
+++ b/src/main/webapp/app/exercises/programming/shared/code-editor/container/code-editor-container.component.html
@@ -33,6 +33,7 @@
         editorCenter
         [selectedFile]="selectedFile"
         [sessionId]="participation ? participation.id : 'test'"
+        [annotations]="annotations"
         [commitState]="commitState"
         [editorState]="editorState"
         (onFileContentChange)="onFileContentChange($event)"
